# 2048-rust

./: .gitattributes  Cargo.toml  README.md  index.html
src/: game_state.rs  lib.rs
style/: README.md  main.scss
